force-app/main/default/objects/SObjectWork__c/SObjectWork__c.object-meta.xml
<CustomObject>
    <label>SObject Work</label>
    <nameField>
        <displayFormat>SOW_{000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SObject Work Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>