force-app/main/default/objects/SObjectWork__c/fields/ltxt_FailedWithException__c.field-meta.xml
<CustomField>
    <fullName>ltxt_FailedWithException__c</fullName>
    <label>Failed With Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>