force-app/main/default/objects/SObjectWork__c/fields/ltxt_ProcessorParamsAsJSON__c.field-meta.xml
<CustomField>
    <fullName>ltxt_ProcessorParamsAsJSON__c</fullName>
    <label>Processor Params As JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>