force-app/main/default/objects/SObjectWork__c/fields/ltxt_SObjectIds__c.field-meta.xml
<CustomField>
    <fullName>ltxt_SObjectIds__c</fullName>
    <label>SObject Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>