force-app/main/default/objects/SObjectWork__c/fields/pkl_CurrentState__c.field-meta.xml
<CustomField>
    <fullName>pkl_CurrentState__c</fullName>
    <label>Current State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <label>QUEUED</label>
                <fullName>QUEUED</fullName>
                <default>true</default>
            </value>
            <value>
                <label>PROCESSING</label>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <label>FAILED</label>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <label>DONE</label>
                <fullName>DONE</fullName>
            </value>
        </valueSetDefinition>


    </valueSet>
</CustomField>