force-app/main/default/objects/SObjectWork__c/fields/txt_LastSuccessfulId__c.field-meta.xml
<CustomField>
    <fullName>txt_LastSuccessfulId__c</fullName>
    <label>Last Successful Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>