force-app/main/default/objects/SObjectWork__c/fields/txt_ProcessorClassName__c.field-meta.xml
<CustomField>
    <fullName>txt_ProcessorClassName__c</fullName>
    <label>Processor Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>